{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 53,
  "lineage": "c3f3c36b-e3ed-0bd5-4f05-065a5fa332b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c17eb4947c76bda",
            "arn": "arn:aws:ec2:us-east-1:805046891371:elastic-ip/eipalloc-00c17eb4947c76bda",
            "domain": "vpc",
            "id": "eipalloc-00c17eb4947c76bda",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-193-249-108.compute-1.amazonaws.com",
            "public_ip": "32.193.249.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "image-processor-dev-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-eip-1",
              "Project": "image-processor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1144735f7dbf29a",
            "arn": "arn:aws:ec2:us-east-1:805046891371:elastic-ip/eipalloc-0a1144735f7dbf29a",
            "domain": "vpc",
            "id": "eipalloc-0a1144735f7dbf29a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-194-76-57.compute-1.amazonaws.com",
            "public_ip": "32.194.76.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "image-processor-dev-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-eip-2",
              "Project": "image-processor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:internet-gateway/igw-0ae292e05846df509",
            "id": "igw-0ae292e05846df509",
            "owner_id": "805046891371",
            "tags": {
              "Name": "image-processor-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-igw",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c17eb4947c76bda",
            "association_id": "eipassoc-04f506288803155f0",
            "connectivity_type": "public",
            "id": "nat-053b195f2539814ba",
            "network_interface_id": "eni-0f3fc9f6da8dca11c",
            "private_ip": "10.0.1.76",
            "public_ip": "32.193.249.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06c22693f1b181018",
            "tags": {
              "Name": "image-processor-dev-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-nat-1",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1144735f7dbf29a",
            "association_id": "eipassoc-0c0841559cea0776f",
            "connectivity_type": "public",
            "id": "nat-0f763ff1b690708dd",
            "network_interface_id": "eni-0ac387d97354ffe34",
            "private_ip": "10.0.2.246",
            "public_ip": "32.194.76.57",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07529d8864005758d",
            "tags": {
              "Name": "image-processor-dev-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-nat-2",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:route-table/rtb-046dcf60259d0a2c8",
            "id": "rtb-046dcf60259d0a2c8",
            "owner_id": "805046891371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-053b195f2539814ba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-processor-dev-rt-private-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-rt-private-1",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:route-table/rtb-05d3c0d93d6f31b1d",
            "id": "rtb-05d3c0d93d6f31b1d",
            "owner_id": "805046891371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f763ff1b690708dd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-processor-dev-rt-private-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-rt-private-2",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:route-table/rtb-0436f1db420748119",
            "id": "rtb-0436f1db420748119",
            "owner_id": "805046891371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae292e05846df509",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-processor-dev-rt-public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-rt-public",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0da0910bfebb3ef",
            "route_table_id": "rtb-046dcf60259d0a2c8",
            "subnet_id": "subnet-0c0659f066fb7e309"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a636b9da06760709",
            "route_table_id": "rtb-05d3c0d93d6f31b1d",
            "subnet_id": "subnet-016c8b401a0c370a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e7ab54aa539c523",
            "route_table_id": "rtb-0436f1db420748119",
            "subnet_id": "subnet-06c22693f1b181018"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dd4b00514b85190",
            "route_table_id": "rtb-0436f1db420748119",
            "subnet_id": "subnet-07529d8864005758d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "crop_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:security-group/sg-0a05db42046c0341e",
            "description": "SG para Lambda crop",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS hacia S3 y SQS endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0a05db42046c0341e",
            "ingress": [],
            "name": "image-processor-dev-sg-crop-lambda",
            "name_prefix": "",
            "owner_id": "805046891371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "image-processor-dev-sg-crop-lambda"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-sg-crop-lambda",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "upload_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:security-group/sg-064ec2e3bb68f092a",
            "description": "SG para Lambda upload",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS hacia S3 y SQS endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-064ec2e3bb68f092a",
            "ingress": [],
            "name": "image-processor-dev-sg-upload-lambda",
            "name_prefix": "",
            "owner_id": "805046891371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "image-processor-dev-sg-upload-lambda"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-sg-upload-lambda",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:security-group/sg-03859432bb46af80c",
            "description": "SG para VPC Endpoint de SQS",
            "egress": [],
            "id": "sg-03859432bb46af80c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Desde lambdas",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-064ec2e3bb68f092a",
                  "sg-0a05db42046c0341e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "image-processor-dev-sg-vpce-sqs",
            "name_prefix": "",
            "owner_id": "805046891371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "image-processor-dev-sg-vpce-sqs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-sg-vpce-sqs",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.crop_lambda",
            "aws_security_group.upload_lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-0c0659f066fb7e309",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0659f066fb7e309",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-dev-private-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-private-1",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-016c8b401a0c370a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016c8b401a0c370a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-dev-private-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-private-2",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-06c22693f1b181018",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c22693f1b181018",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-public-1",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-07529d8864005758d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07529d8864005758d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-dev-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-public-2",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:vpc/vpc-0dab2f9937f1944de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027a04faa06a41ddc",
            "default_route_table_id": "rtb-0e686326a56ef593b",
            "default_security_group_id": "sg-0a051924b989ba564",
            "dhcp_options_id": "dopt-04624349cc8a268d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dab2f9937f1944de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e686326a56ef593b",
            "owner_id": "805046891371",
            "tags": {
              "Name": "image-processor-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-vpc",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:vpc-endpoint/vpce-03c84ec4a0d90d047",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03c84ec4a0d90d047",
            "ip_address_type": "ipv4",
            "owner_id": "805046891371",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:GetObject\",\"s3:PutObject\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"arn:aws:s3:::image-processor-dev-images-20c92e78/*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-046dcf60259d0a2c8",
              "rtb-05d3c0d93d6f31b1d"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "image-processor-dev-vpce-s3"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-vpce-s3",
              "Project": "image-processor"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.images",
            "aws_subnet.public",
            "aws_vpc.main",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:vpc-endpoint/vpce-014f85ae405b42fcf",
            "dns_entry": [
              {
                "dns_name": "vpce-014f85ae405b42fcf-8zc7assy.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-014f85ae405b42fcf-8zc7assy-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-014f85ae405b42fcf-8zc7assy-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06209531M5PB9LYKLKT5"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z06209521OR7NKFT9V9HW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-014f85ae405b42fcf",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-020f6cfe73a32ef2b",
              "eni-0aff20157a629bc69"
            ],
            "owner_id": "805046891371",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03859432bb46af80c"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.228",
                "subnet_id": "subnet-0c0659f066fb7e309"
              },
              {
                "ipv4": "10.0.12.234",
                "subnet_id": "subnet-016c8b401a0c370a3"
              }
            ],
            "subnet_ids": [
              "subnet-016c8b401a0c370a3",
              "subnet-0c0659f066fb7e309"
            ],
            "tags": {
              "Name": "image-processor-dev-vpce-sqs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "image-processor-dev-vpce-sqs",
              "Project": "image-processor"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dab2f9937f1944de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.crop_lambda",
            "aws_security_group.upload_lambda",
            "aws_security_group.vpce_sqs",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}